# axiom-evi-allocator-lib

./: .gitignore  Makefile.am  README.md  configure.ac  evi_lmm.pc.in
debian/: .gitignore  control  libevi-lmm-dev.install.other  libevi-lmm-dev.install.x86  libevi-lmm.install.other  libevi-lmm.install.x86  rules
docs/: .gitignore  doxygen.cfg.in
ldscript/: Makefile.am
ldscript/aarch64/: .gitignore  xs_map64.lds.in
ldscript/x86/: Makefile.am  xs_map64.lds.in
src/: Makefile.am  axiom_allocator.c  axiom_allocator.h  axiom_err.h  axiom_lmm.h  debug.h  evi_allocator.c  evi_allocator.h  evi_err.h  evi_lmm.h  freeidx_list.c  freeidx_list.h  freelist.c  freelist.h  init.c  xs_map64.lds
test/: .gitignore  Makefile.am  aarch64_allocator_test.c  testA.c  testB.c  testFreelist.c
